--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@
 
 
 .active {
-    background-color: #666;
-    color: white;
+    background-color: white;
+    color: black;
     border-radius: 5px;
   }
 
